# criticalup

./: .gitignore  .gitmodules  .mailmap  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  bors.toml  criticalup.toml  dist-workspace.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/actions/: use-ferrocene.yml
.github/actions/criticalup-config/: action.yml
.github/actions/use-ferrocene/: action.yml
.github/partials/: use-ferrocene.yml
.github/workflows/: build.yml  ci.yml  deploy-docs.yml  docs.yml  package.yml  release.yml
.reuse/: dep5
ci/: criticalup-installer.ps1  criticalup-installer.sh  install-instructions.md
crates/criticaltrust/: Cargo.toml
crates/criticaltrust/src/: errors.rs  lib.rs  manifests.rs  revocation_info.rs  serde_base64.rs  sha256.rs  test_utils.rs
crates/criticaltrust/src/integrity/: detect_manifest.rs  mod.rs  verifier.rs
crates/criticaltrust/src/keys/: mod.rs  newtypes.rs  pair.rs  pair_aws_kms.rs  pair_ephemeral.rs  public.rs
crates/criticaltrust/src/keys/algorithms/: ecdsa_p256_sha256_asn1_spki_der.rs  mod.rs
crates/criticaltrust/src/signatures/: keychain.rs  mod.rs  payload.rs
crates/criticaltrust/src/v2/: manifests.rs  mod.rs
crates/criticaltrust/src/v2/snapshots/: criticaltrust__v2__manifests__tests__release_package_json_serialize.snap  criticaltrust__v2__manifests__tests__release_package_yaml_serialize.snap
crates/criticalup/: Cargo.toml  README.md
crates/criticalup-cli/: Cargo.toml  README.md
crates/criticalup-cli/src/: arg.rs  binary_proxies.rs  errors.rs  lib.rs  spawn.rs
crates/criticalup-cli/src/cli/: connectivity.rs  instrumentation.rs  mod.rs
crates/criticalup-cli/src/cli/subcommand/: archive.rs  clean.rs  doc.rs  init.rs  install.rs  mod.rs  remove.rs  run.rs  verify.rs  which.rs
crates/criticalup-cli/src/cli/subcommand/auth/: mod.rs  remove.rs  set.rs
crates/criticalup-cli/src/cli/subcommand/link/: init.rs  mod.rs  remove.rs  show.rs
crates/criticalup-cli/src/commands/: archive.rs  auth.rs  auth_remove.rs  auth_set.rs  clean.rs  doc.rs  install.rs  mod.rs  remove.rs  run.rs  tarball.rs  verify.rs  which.rs
crates/criticalup-cli/tests/cli/: artifact_server_install.rs  auth.rs  auth_remove.rs  auth_set.rs  binary_proxies.rs  clean.rs  doc.rs  init.rs  install.rs  main.rs  remove.rs  root.rs  run.rs  utils.rs  which.rs
crates/criticalup-cli/tests/resources/: criticalup-doc-no-package.toml  criticalup-doc.toml  criticalup-empty-packages.toml  criticalup-which.toml  criticalup.toml
crates/criticalup-cli/tests/snapshots/: cli__auth__help_message.snap  cli__auth__invalid_token.snap  cli__auth__no_token.snap  cli__auth__token_with_expiry.snap  cli__auth__token_without_expiry.snap  cli__auth_remove__help_message.snap  cli__auth_remove__token_missing.snap  cli__auth_remove__token_present.snap  cli__auth_set__byte_zero_via_stdin.snap  cli__auth_set__help_message.snap  cli__auth_set__via_stdin__set_invalid_token.snap  cli__auth_set__via_stdin__set_valid_token_with_existing_token.snap  cli__auth_set__via_tty_eod__set_invalid_token.snap  cli__auth_set__via_tty_eod__set_invalid_token_with_existing_token.snap  cli__auth_set__via_tty_eod__set_valid_token.snap  cli__auth_set__via_tty_nl__set_invalid_token.snap  cli__auth_set__via_tty_nl__set_valid_token_with_existing_token.snap  cli__binary_proxies__invoking_inside_of_installed_project.snap  cli__binary_proxies__invoking_inside_of_project_with_no_installed_proxy.snap  cli__binary_proxies__invoking_outside_of_project.snap  cli__clean__clean_deletes_only_unused_installations.snap  cli__clean__clean_deletes_only_unused_installations_also_from_disk.snap  cli__clean__clean_deletes_only_unused_installations_that_are_not_on_disk.snap  cli__clean__help_message.snap  cli__clean__removes_unused_installations_from_disk_that_do_not_have_state.snap  cli__doc__error_no_file.snap  cli__doc__error_opening_browser.snap  cli__doc__help_message.snap  cli__doc__open_browser.snap  cli__doc__show_path_only.snap  cli__init__creates_manifest_successfully.snap  cli__init__error_on_missing_required_arg.snap  cli__init__help_message.snap  cli__init__prints_manifest_successfully.snap  cli__init__shows_error_on_existing_manifest.snap  cli__install__already_installed_toolchain_should_not_throw_error.snap  cli__install__empty_packages_list.snap  cli__install__help_message.snap  cli__remove__help_message.snap  cli__remove__remove_deletes_only_manifest_from_list_and_dir.snap  (+12 more)
crates/criticalup-core/: Cargo.toml  build.rs
crates/criticalup-core/src/: binary_proxies.rs  cache.rs  download_server_cache.rs  download_server_client.rs  envvars.rs  errors.rs  lib.rs  state.rs  test_environment.rs  test_utils.rs  utils.rs
crates/criticalup-core/src/config/: mod.rs  paths.rs
crates/criticalup-core/src/project_manifest/: mod.rs  substitutions.rs  v1.rs
crates/criticalup-dev/: Cargo.toml  README.md
crates/criticalup-dev/src/: main.rs
crates/criticalup/src/: main.rs
crates/criticalup/wix/: main.wxs  main.wxs.license
crates/mock-artifact-server/: Cargo.toml
crates/mock-artifact-server/src/: handlers.rs  lib.rs  server.rs
crates/mock-download-server/: Cargo.toml
crates/mock-download-server/src/: handlers.rs  lib.rs  server.rs
docs/: .flake8  .gitignore  .gitmodules  README.rst  make.py  pyproject.toml  sphinx-substitutions.toml  target-names.toml
docs/src/: changelog.rst  cli.rst  conf.py  criticalup_cli.rst  criticalup_toml.rst  index.rst  install.rst  overview.rst  platforms.rst  subscriptions.rst  system-requirements.rst
docs/src/using-criticalup/: authenticating.rst  creating-sample-manifest.rst  running-tools.rst  toolchain-management.rst
