# SPDX-FileCopyrightText: The Ferrocene Developers
# SPDX-License-Identifier: MIT OR Apache-2.0

[workspace]
resolver = "2"
members = [ "crates/*"]
exclude = ["docs/.linkchecker/src/tools/linkchecker"]

[workspace.dependencies]
dirs = { version = "6.0.0", default-features = false }
futures = "0.3"
md-5 = "0.10.6"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
reqwest-middleware = "0.4.1"
reqwest-retry = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["base64"]}
sha2 = "0.10.8"
tar = "0.4.44"
tempfile = "3"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["std", "serde", "serde-well-known", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "tracing"] }
toml_edit = { version = "0.22.24", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "ansi",
  "env-filter",
  "json",
] }
tracing-tree = "0.2"
walkdir = "2"
xz2 = "0.1.7"
hyper = { version = "1", features = ["tracing"] }

[profile.release]
lto = "thin"
strip = "debuginfo"
