# SPDX-FileCopyrightText: The Ferrocene Developers
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "criticaltrust"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Digital signatures implementation for CriticalUp"

[dependencies]
base64 = "0.21.7"
elliptic-curve = { version = "0.13.8", features = ["pkcs8"]  }
p256 = { version = "0.13.2", features = ["ecdsa-core"]  }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = { version = "3.9.0", features = ["base64"]}
sha2 = "0.10.8"
thiserror = "1.0.61"
time = { version = "0.3.36", features = ["std", "serde", "serde-well-known", "macros"] }
aws-config = { version = "1.5.0", optional = true, features = ["rustls", "behavior-version-latest"] }
aws-sdk-kms = { version = "1.28.0", optional = true, features = ["rustls"] }
aws-smithy-runtime-api = { version = "1.6.1", optional = true }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"], optional = true }
once_cell = "1.19.0"

[dev-dependencies]
itertools = "0.13.0"

[features]
aws-kms = ["aws-sdk-kms", "aws-config", "aws-smithy-runtime-api", "tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
