# SPDX-FileCopyrightText: The Ferrocene Developers
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "criticaltrust"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Digital signatures implementation for CriticalUp"

[dependencies]
base64 = "0.22.1"
elliptic-curve = { version = "0.13.8", features = ["pkcs8"]  }
p256 = { version = "0.13.2", features = ["ecdsa-core"]  }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_with = { version = "3.12.0", features = ["base64"]}
sha2 = "0.10.8"
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["std", "serde", "serde-well-known", "macros"] }
aws-config = { version = "1.5.16", optional = true, features = ["rustls", "behavior-version-latest"] }
aws-sdk-kms = { version = "1.60.0", optional = true, features = ["rustls"] }
aws-smithy-runtime-api = { version = "1.7.3", optional = true }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"], optional = true }
once_cell = "1.20.3"
reqwest.workspace = true

[dev-dependencies]
itertools = "0.14.0"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }

[features]
aws-kms = ["aws-sdk-kms", "aws-config", "aws-smithy-runtime-api", "tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
