# SPDX-FileCopyrightText: The Ferrocene Developers
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "criticaltrust"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Digital signatures implementation for CriticalUp"

[dependencies]
aws-config = { version = "1.6.0", optional = true, features = ["rustls", "behavior-version-latest"] }
aws-sdk-kms = { version = "1.63.0", optional = true, features = ["rustls"] }
aws-smithy-runtime-api = { version = "1.7.4", optional = true }
base64 = "0.22.1"
elliptic-curve = { version = "0.13.8", features = ["pkcs8"]  }
once_cell = "1.21.1"
p256 = { version = "0.13.2", features = ["ecdsa-core"]  }
rand = { version = "0.8.5", features = ["getrandom"] }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, optional = true }
reqwest.workspace = true
serde_yaml = "0.9.34"
insta = { version = "1.43.1", features = ["yaml"] }
semver = { version = "1.0.26", features = ["serde"] }
serde-semver = "0.2.1"

[dev-dependencies]
itertools = "0.14.0"
tokio.workspace = true

[features]
aws-kms = ["aws-sdk-kms", "aws-config", "aws-smithy-runtime-api", "tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
