# SPDX-FileCopyrightText: The Ferrocene Developers
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "criticalup-cli"
version = "1.2.0"
edition = "2021"
repository = "https://github.com/ferrocene/criticalup"
homepage = "https://github.com/ferrocene/criticalup"
authors = ["The CriticalUp Developers"]
description = "CriticalUp is the official tool to download and install Ferrocene"

[package.metadata.dist]
dist = false

[[test]]
name = "cli"
path = "tests/cli/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["std", "derive", "help", "usage"] }
criticaltrust = { path = "../criticaltrust" }
criticalup-core = { path = "../criticalup-core" }
futures.workspace = true
opener = "0.7.2"
serde_json = "1.0.132"
tar = "0.4.43"
tempfile.workspace = true
thiserror = "2.0.3"
time = { version = "0.3.36", features = ["std", "serde", "serde-well-known", "macros"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
xz2 = "0.1.7"

[dev-dependencies]
insta = { version = "1.41.1", features = ["filters"] }
mock-download-server = { path = "../mock-download-server" }
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
tempfile.workspace = true

[target.x86_64-pc-windows-msvc.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Console"] }
winapi = "0.3.9"
