# SPDX-FileCopyrightText: The Ferrocene Developers
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "criticalup-cli"
version = "1.5.1"
edition = "2021"
repository = "https://github.com/ferrocene/criticalup"
homepage = "https://github.com/ferrocene/criticalup"
authors = ["The CriticalUp Developers"]
description = "CriticalUp is the official tool to download and install Ferrocene"

[package.metadata.dist]
dist = false

[[test]]
name = "cli"
path = "tests/cli/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["std", "derive", "help", "usage"] }
criticaltrust = { path = "../criticaltrust" }
criticalup-core = { path = "../criticalup-core" }
futures.workspace = true
opener = { version = "0.7.2"}
serde_json.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
url = "2.5.4"
walkdir.workspace = true
xz2 = { workspace = true, features = ["static"] }
hyper.workspace = true

[dev-dependencies]
dirs.workspace = true
insta = { version = "1.42.2", features = ["filters"] }
mock-download-server = { path = "../mock-download-server" }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
tempfile.workspace = true
toml = "0.8.20"

[target.x86_64-pc-windows-msvc.dependencies]
winapi = "0.3.9"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Console"] }
