# SPDX-FileCopyrightText: The Ferrocene Developers
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "criticalup-core"
version = "0.0.0"
edition = "2021"

build = "build.rs"

[dependencies]
criticaltrust = { path = "../criticaltrust" }
reqwest.workspace = true
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"
toml_edit = { version = "0.22.22", features = ["serde"] }
sha2 = { version = "0.10.8" }
dirs = { version = "5.0.1", default-features = false }
tokio.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
tracing.workspace = true

[dev-dependencies]
mock-download-server = { path = "../mock-download-server" }
tempfile.workspace = true
