# SPDX-FileCopyrightText: The Ferrocene Developers
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "criticalup-core"
version = "0.0.0"
edition = "2021"

build = "build.rs"

[dependencies]
criticaltrust = { path = "../criticaltrust" }
dirs.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
tokio.workspace = true
tracing.workspace = true
md-5.workspace = true

[dev-dependencies]
mock-download-server = { path = "../mock-download-server" }
axum.workspace = true
tempfile.workspace = true
