[package]
name = "criticalup-dev"
version = "1.0.0-prerelease.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criticaltrust = { path = "../criticaltrust" }
criticalup-cli = { path = "../criticalup-cli" }
