# SPDX-FileCopyrightText: The Ferrocene Developers
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "criticalup-dev"
version = "1.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criticaltrust = { path = "../criticaltrust" }
criticalup-cli = { path = "../criticalup-cli" }
tokio.workspace = true
