# SPDX-FileCopyrightText: The Ferrocene Developers
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "mock-download-server"
version = "0.0.0"
edition = "2021"

[dependencies]
criticaltrust = { path = "../criticaltrust" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tiny_http = { version = "0.12.0", default-features = false, features = ["rustls"] }
time = { version = "0.3.37", features = ["std", "serde", "serde-well-known"] }
sha2 = "0.10.7"
tar = "0.4.43"
xz2 = "0.1.7"
anyhow = "1.0.19"
walkdir = "2.5.0"
tempfile.workspace = true
tokio.workspace = true
