# SPDX-FileCopyrightText: The Ferrocene Developers
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "mock-download-server"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.19"
criticaltrust = { path = "../criticaltrust" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tiny_http = { version = "0.12.0", default-features = false, features = ["rustls"] }
tar.workspace = true
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
walkdir.workspace = true
xz2.workspace = true
