# SPDX-FileCopyrightText: The Ferrocene Developers
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "mock-download-server"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
criticaltrust = { path = "../criticaltrust", features = ["hash-revocation"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
walkdir.workspace = true
xz2 = { workspace = true, features = ["static"] }
md-5.workspace = true
axum.workspace = true
axum-extra.workspace = true
http-body-util.workspace = true
